log
Wed, Mar 19, 2025  9:10:39 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:40 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
c797bd9
Wed, Mar 19, 2025  9:13:14 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
083f5a5
Wed, Mar 19, 2025  9:16:40 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2c561a1
Sat, Mar 22, 2025  2:21:44 PM: 
 tests:  1|4
total_score: 10/70
bae6ca4
Sat, Mar 22, 2025  2:47:46 PM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *elemento;
               ^~~~~~~~~
exercises.c:66:15: error: void value not ignored as it ought to be
exercises.c:67:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = next(L);
             ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b775444
Sat, Mar 22, 2025  2:51:51 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = next(L);
             ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7856111
